force-app/main/default/objects/PTR__c/PTR__c.object-meta.xml
<CustomObject>
    <description>Point In Time Reporting</description>
    <label>Point In Time Reporting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PTR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Point In Time Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>