force-app/main/default/objects/PTR__c/fields/Aggregator_Involved_in_the_Oppty_Risk__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Involved_in_the_Oppty_Risk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aggregator Involved in the Oppty/Risk</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Aggregator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Point In Time Reporting (Aggregator Involved in the Oppty/Risk)</relationshipLabel>
    <relationshipName>Point_In_Time_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>