force-app/main/default/objects/PTR__c/fields/Anticipated_Actual_Close_Date_Medical__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Actual_Close_Date_Medical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated/Actual Close Date (Medical)</label>
    <type>Date</type>
</CustomField>