force-app/main/default/objects/PTR__c/fields/CM_VP__c.field-meta.xml
<CustomField>
    <fullName>CM_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Point_In_Time_Reporting1</relationshipName>
    <type>Lookup</type>
</CustomField>