force-app/main/default/objects/PTR__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Point In Time Reporting</relationshipLabel>
    <relationshipName>Point_In_Time_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>