force-app/main/default/objects/PTR__c/fields/Competitive_Non_Competitive_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Non_Competitive_Indicator__c</fullName>
    <label>Competitive/Non Competitive Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Non Competitive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>