force-app/main/default/objects/PTR__c/fields/Disposition_Medical__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Medical__c</fullName>
    <label>Disposition (Medical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Emerging Risk</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>Dead RFI</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Lost: Finalist</fullName>
            </value>
            <value>
                <fullName>Lost: Non-Finalist</fullName>
            </value>
            <value>
                <fullName>Passed to Another Segment</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Transfer Out</fullName>
            </value>
            <value>
                <fullName>Dead Pending Transfer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>