force-app/main/default/objects/PTR__c/fields/Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distribution Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>