force-app/main/default/objects/PTR__c/fields/Estimated_Additional_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Additional_New_Members__c</fullName>
    <label>Estimated Additional New Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>