force-app/main/default/objects/PTR__c/fields/Estimated_Members_Existing_New__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Members_Existing_New__c</fullName>
    <label>Estimated Members (Existing + New)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>