force-app/main/default/objects/PTR__c/fields/Existing_Mbrs_Retained__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mbrs_Retained__c</fullName>
    <label>Existing Mbrs Retained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>