force-app/main/default/objects/PTR__c/fields/Existing_Members_Involved_in_the_Bid__c.field-meta.xml
<CustomField>
    <fullName>Existing_Members_Involved_in_the_Bid__c</fullName>
    <label>Existing Members Involved in the Bid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>