force-app/main/default/objects/PTR__c/fields/Existing_Members_Risk_Outcome_Medical__c.field-meta.xml
<CustomField>
    <fullName>Existing_Members_Risk_Outcome_Medical__c</fullName>
    <label>Existing Members Risk Outcome (Medical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
            <value>
                <fullName>Partial Cancellation</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>