force-app/main/default/objects/PTR__c/fields/Existing_Membership_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Existing_Membership_at_Risk__c</fullName>
    <label>Existing Membership at Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>