force-app/main/default/objects/PTR__c/fields/ExternalUniqueId__c.field-meta.xml
<CustomField>
    <fullName>ExternalUniqueId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Unique Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>