force-app/main/default/objects/PTR__c/fields/Is_this_a_UMR_Opportunity_Risk__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_UMR_Opportunity_Risk__c</fullName>
    <label>Is this a UMR Opportunity\Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - UMR</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Yet Known</fullName>
            </value>
            <value>
                <fullName>Yes - Both</fullName>
            </value>
            <value>
                <fullName>Yes - Bind</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>