force-app/main/default/objects/PTR__c/fields/Mbrs_Transferred_From_To_Another_Busines__c.field-meta.xml
<CustomField>
    <fullName>Mbrs_Transferred_From_To_Another_Busines__c</fullName>
    <description>Name has been Updated, but the iTag remains same as old According to case Id - 1062</description>
    <label>Mbrs Transferred From To Another Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>