force-app/main/default/objects/PTR__c/fields/Medical_SVP__c.field-meta.xml
<CustomField>
    <fullName>Medical_SVP__c</fullName>
    <label>Medical SVP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Clare</fullName>
            </value>
            <value>
                <fullName>Danielle Peacock</fullName>
            </value>
            <value>
                <fullName>John Elliott</fullName>
            </value>
            <value>
                <fullName>Lauren Montwill</fullName>
            </value>
            <value>
                <fullName>Steven Schultz</fullName>
            </value>
            <value>
                <fullName>Steven Zucker</fullName>
            </value>
            <value>
                <fullName>Christopher Timpson</fullName>
            </value>
            <value>
                <fullName>Brian Bellows</fullName>
                <isActive>false</isActive>
                <label>Brian Bellows</label>
            </value>
            <value>
                <fullName>Brian Luehne</fullName>
                <isActive>false</isActive>
                <label>Brian Luehne</label>
            </value>
            <value>
                <fullName>Eugene Dours</fullName>
                <isActive>false</isActive>
                <label>Eugene Dours</label>
            </value>
            <value>
                <fullName>Jessica Bass</fullName>
                <isActive>false</isActive>
                <label>Jessica Bass</label>
            </value>
            <value>
                <fullName>John King</fullName>
                <isActive>false</isActive>
                <label>John King</label>
            </value>
            <value>
                <fullName>Michael Smit</fullName>
                <isActive>false</isActive>
                <label>Michael Smit</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Shawn Mobley</fullName>
                <isActive>false</isActive>
                <label>Shawn Mobley</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>William Leahy</fullName>
                <isActive>false</isActive>
                <label>William Leahy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>