force-app/main/default/objects/PTR__c/fields/Members_in_the_Proposal_Medical__c.field-meta.xml
<CustomField>
    <fullName>Members_in_the_Proposal_Medical__c</fullName>
    <label>Members in the Proposal (Medical)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>