force-app/main/default/objects/PTR__c/fields/Membership_Activity__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Activity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Point In Time Reporting</relationshipLabel>
    <relationshipName>Point_In_Time_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>