force-app/main/default/objects/PTR__c/fields/Membership_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Point_In_Time_Reporting3</relationshipName>
    <type>Lookup</type>
</CustomField>