force-app/main/default/objects/PTR__c/fields/Membership_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activity_Type__c</fullName>
    <label>Membership Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
                <default>true</default>
                <label>Traditional</label>
            </value>
            <value>
                <fullName>Private Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>