force-app/main/default/objects/PTR__c/fields/Merit_Id__c.field-meta.xml
<CustomField>
    <fullName>Merit_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Merit Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>