force-app/main/default/objects/PTR__c/fields/Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month-End Date</label>
    <type>Date</type>
</CustomField>