force-app/main/default/objects/PTR__c/fields/Net_Results__c.field-meta.xml
<CustomField>
    <fullName>Net_Results__c</fullName>
    <label>Net Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>