force-app/main/default/objects/PTR__c/fields/Overall_New_Membership_Impact__c.field-meta.xml
<CustomField>
    <fullName>Overall_New_Membership_Impact__c</fullName>
    <label>Overall New Membership Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>