force-app/main/default/objects/PTR__c/fields/Reason_for_the_Opportunity_Risk__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_the_Opportunity_Risk__c</fullName>
    <label>Reason for the Opportunity/Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed or Likely RFP</fullName>
            </value>
            <value>
                <fullName>Proactive Lead</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Proactive Renewal</fullName>
            </value>
            <value>
                <fullName>Formal Request for Renewal</fullName>
            </value>
            <value>
                <fullName>Market Review That Moves Mbrs</fullName>
            </value>
            <value>
                <fullName>Merger/Acq - No Bid/No Control</fullName>
            </value>
            <value>
                <fullName>Merger/Acq - With Bid/Control</fullName>
            </value>
            <value>
                <fullName>Private Exchange Team Transaction</fullName>
            </value>
            <value>
                <fullName>Intersegment Transfer</fullName>
            </value>
            <value>
                <fullName>Emerging Risk (Downside/Layoff/Other)</fullName>
            </value>
            <value>
                <fullName>Emerging Risk or Other</fullName>
                <isActive>false</isActive>
                <label>Emerging Risk or Other</label>
            </value>
            <value>
                <fullName>Exchange Renewal</fullName>
                <isActive>false</isActive>
                <label>Exchange Renewal</label>
            </value>
            <value>
                <fullName>Merger and/or Acquisition</fullName>
                <isActive>false</isActive>
                <label>Merger and/or Acquisition</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>RFP Lead</fullName>
                <isActive>false</isActive>
                <label>RFP Lead</label>
            </value>
            <value>
                <fullName>Retiree Review</fullName>
                <isActive>false</isActive>
                <label>Retiree Review</label>
            </value>
            <value>
                <fullName>Transfer In/Out (Admin)</fullName>
                <isActive>false</isActive>
                <label>Transfer In/Out (Admin)</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>