force-app/main/default/objects/PTR__c/fields/Risk_Probability_Medical__c.field-meta.xml
<CustomField>
    <fullName>Risk_Probability_Medical__c</fullName>
    <label>Risk Probability (Medical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20% Unlikely</fullName>
            </value>
            <value>
                <fullName>40% Less Likely</fullName>
            </value>
            <value>
                <fullName>60% More Likely</fullName>
            </value>
            <value>
                <fullName>80% Very Likely</fullName>
            </value>
            <value>
                <fullName>90% RVP Approval Needed</fullName>
            </value>
            <value>
                <fullName>100% Certainty</fullName>
            </value>
            <value>
                <fullName>25% Real but Small Risk</fullName>
                <isActive>false</isActive>
                <label>25% Real but Small Risk</label>
            </value>
            <value>
                <fullName>50% Even Chance</fullName>
                <isActive>false</isActive>
                <label>50% Even Chance</label>
            </value>
            <value>
                <fullName>75% Very Likely</fullName>
                <isActive>false</isActive>
                <label>75% Very Likely</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>