force-app/main/default/objects/PTR__c/fields/Sales_Stage_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_Disposition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Stage / Disposition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>