force-app/main/default/objects/PTR__c/fields/Sales_Stage_Medical__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage_Medical__c</fullName>
    <label>Sales Stage (Medical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Finalist</fullName>
            </value>
            <value>
                <fullName>Notified</fullName>
            </value>
            <value>
                <fullName>Emerging Risk\No Upside</fullName>
            </value>
            <value>
                <fullName>Pending Transfer In</fullName>
            </value>
            <value>
                <fullName>Pending Transfer Out</fullName>
            </value>
            <value>
                <fullName>Transfer In/Out</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <isActive>false</isActive>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>