force-app/main/default/objects/PTR__c/fields/SCE__c.field-meta.xml
<CustomField>
    <fullName>SCE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Point_In_Time_Reporting</relationshipName>
    <type>Lookup</type>
</CustomField>