force-app/main/default/objects/PTR__c/fields/Sold_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Sold_New_Members__c</fullName>
    <label>Sold New Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>