force-app/main/default/objects/PTR__c/fields/Termed_Members__c.field-meta.xml
<CustomField>
    <fullName>Termed_Members__c</fullName>
    <label>Termed Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>