force-app/main/default/objects/PTR__c/fields/VPCR_RVP__c.field-meta.xml
<CustomField>
    <fullName>VPCR_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VPCR/RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Point_In_Time_Reporting2</relationshipName>
    <type>Lookup</type>
</CustomField>